--- a/posts/2026-02-08-waymo-world-model-genie-3/index.qmd
+++ b/posts/2026-02-08-waymo-world-model-genie-3/index.qmd
@@ -35,4 +35,4 @@ Perhaps most impressively, the Waymo World Model can transform standard 2D smart
 
 By reducing the compute cost for long-horizon rollouts and increasing the diversity of scenarios, Waymo is setting a new standard for how generative AI can solve the most difficult problems in physical robotics.
 
-[Waymo Blog Post](https://waymo.com/blog/2026/02/the-waymo-world-model-a-new-frontier-for-autonomous-driving-simulation/){rel="nofollow"}
+[Waymo Blog Post](https://waymo.com/blog/2026/02/the-waymo-world-model-a-new-frontier-for-autonomous-driving-simulation/){rel="nofollow"}{rel="nofollow"}
