--- a/posts/2026-02-16-kani-tts-2/index.qmd
+++ b/posts/2026-02-16-kani-tts-2/index.qmd
@@ -54,4 +54,4 @@ Kani-TTS-2 represents a significant shift in the TTS landscape:
 3. **Speed**: The 0.2 RTF makes real-time interactive voice applications feasible.
 4. **Open Source**: Apache 2.0 licensing means commercial integration is straightforward.
 
-Kani-TTS-2 is available on Hugging Face in both [English (EN)](https://huggingface.co/nineninesix/kani-tts-2-en) and [Portuguese (PT)](https://huggingface.co/nineninesix/kani-tts-2-pt) versions.
+Kani-TTS-2 is available on Hugging Face in both [English (EN)](https://huggingface.co/nineninesix/kani-tts-2-en){rel="nofollow"} and [Portuguese (PT)](https://huggingface.co/nineninesix/kani-tts-2-pt){rel="nofollow"} versions.
