--- a/posts/2026-02-17-india-ai-impact-summit/index.qmd
+++ b/posts/2026-02-17-india-ai-impact-summit/index.qmd
@@ -54,4 +54,4 @@ With the world's top AI minds converging in Delhi, the summit signals India's am
 
 The summit opens to the general public on February 17, offering a rare opportunity for Indians to engage with cutting-edge AI technology firsthand.
 ---
-*Source: [Hindustan Times](https://www.hindustantimes.com/india-news/ai-impact-summit-delhi-2026-delhi-summit-ai-impact-summit-bharat-mandapam-summit-narendra-modi-delhi-expo-ai-expo-101771203756704.html), [The420.in](https://the420.in/ai-impact-summit-2026-delhi-macron-altman-pichai/), [Reuters](https://www.reuters.com/business/retail-consumer/openai-google-india-hosts-global-ai-summit-2026-02-16/)*
+*Source: [Hindustan Times](https://www.hindustantimes.com/india-news/ai-impact-summit-delhi-2026-delhi-summit-ai-impact-summit-bharat-mandapam-summit-narendra-modi-delhi-expo-ai-expo-101771203756704.html){rel="nofollow"}, [The420.in](https://the420.in/ai-impact-summit-2026-delhi-macron-altman-pichai/){rel="nofollow"}, [Reuters](https://www.reuters.com/business/retail-consumer/openai-google-india-hosts-global-ai-summit-2026-02-16/){rel="nofollow"}*
