--- a/posts/2026-02-17-saaspocalypse-ai-agent-revolution/index.qmd
+++ b/posts/2026-02-17-saaspocalypse-ai-agent-revolution/index.qmd
@@ -42,4 +42,4 @@ In the short term, expect continued volatility as software companies scramble to
 The social contract of the digital economy may require a total overhaul. When AI agents can replace significant portions of white-collar work, policymakers will need to address the rapid pace of seat compression in ways not seen since the automation of manufacturing.
 
 ---
-*Source: [FinancialContent](https://markets.financialcontent.com/stocks/article/marketminute-2026-2-16-the-saaspocalypse-ai-agent-revolution-triggers-historic-25-sell-off-in-software-giants), [Times of India](https://timesofindia.indiatimes.com/technology/tech-news/one-of-americas-biggest-investors-jim-cramer-has-this-joker-message-for-those-saying-anthropic-code-can-do-software-jobs/articleshow/128448689.cms)*
+*Source: [FinancialContent](https://markets.financialcontent.com/stocks/article/marketminute-2026-2-16-the-saaspocalypse-ai-agent-revolution-triggers-historic-25-sell-off-in-software-giants){rel="nofollow"}, [Times of India](https://timesofindia.indiatimes.com/technology/tech-news/one-of-americas-biggest-investors-jim-cramer-has-this-joker-message-for-those-saying-anthropic-code-can-do-software-jobs/articleshow/128448689.cms){rel="nofollow"}*
